--- a/index.html
+++ b/index.html
@@ -300,10 +300,11 @@
             const startOfWeek = new Date(currentDate);
             startOfWeek.setDate(startOfWeek.getDate() - startOfWeek.getDay());
             const headerCells = document.getElementById('calendar-header').children;
+            const daysOfWeek = ['日', '月', '火', '水', '木', '金', '土'];
             for (let i = 1; i <= 7; i++) {
                 const headerDate = new Date(startOfWeek);
                 headerDate.setDate(headerDate.getDate() + i - 1);
-                headerCells[i].textContent = `${headerDate.getMonth() + 1}/${headerDate.getDate()}`;
+                headerCells[i].innerHTML = `${daysOfWeek[headerDate.getDay()]}<br>${headerDate.getMonth() + 1}/${headerDate.getDate()}`;
             }
             times.forEach(time => {
                 const row = document.createElement('tr');
