--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+以下のhtmlだと○△×のセルがconst slotEnd = new Date(slotStart);のせいで30分前にずれているので修正してください
+
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -264,15 +266,171 @@
             const cells = document.querySelectorAll('.calendar td');
             cells.forEach(td => td.classList.remove('selected'));
             cell.classList.add('selected');
-            selectedDate = cell.dataset.date;
-            selectedTime = cell.dataset.time;
-            selectedFullDate = selectedDate + ' ' + selectedTime;
-            console.log('Selected full date:', selectedFullDate);
+            const selectedDay = cell.getAttribute('data-date');
+            const selectedTime = cell.parentElement.firstChild.textContent;
+            selectedFullDate = `${selectedDay} ${selectedTime}`;
+            document.getElementById('date1').value = selectedFullDate;
         }
 
-        function previousWeek() {
-            currentDate.setDate(currentDate.getDate() - 7);
-            fetchAvailability(currentDate);
+        function submitForm() {
+            const formData = {
+                name: document.getElementById('name').value,
+                phone: document.getElementById('phone').value,
+                visitCount: visitCount,
+                selectedSymptom: selectedSymptom,
+                dates: [selectedFullDate, formatDate(document.getElementById('date2').value), formatDate(document.getElementById('date3').value)],
+                message: document.getElementById('message').value
+            };
+
+            if (!formData.name || !formData.phone || !formData.visitCount || !formData.dates[0]) {
+                alert('入力不足です');
+                return;
+            }
+
+            liff.sendMessages([{
+                type: 'text',
+                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates.join('\n ')}\nメッセージ：${formData.message}`
+            }]).then(() => {
+                alert('予約が送信されました');
+                liff.closeWindow();
+            }).catch((err) => {
+                console.error(err);
+                alert('メッセージ送信に失敗しました');
+            });
+        }
+
+        function formatDate(dateStr) {
+            if (!dateStr) return '';
+            const date = new Date(dateStr);
+            return `${date.getFullYear()}-${('0' + (date.getMonth() + 1)).slice(-2)}-${('0' + date.getDate()).slice(-2)} ${('0' + date.getHours()).slice(-2)}:${('0' + date.getMinutes()).slice(-2)}`;
+        }
+
+        async function fetchAvailability(date) {
+            const startTime = new Date(date);
+            const endTime = new Date(date);
+            endTime.setDate(endTime.getDate() + 7);
+
+            const cacheKey = startTime.toISOString() + endTime.toISOString();
+
+            // キャッシュを確認
+            if (availabilityCache[cacheKey]) {
+                console.log('Using cached data');
+                updateCalendar(availabilityCache[cacheKey]);
+                return;
+            }
+
+            const url = 'https://script.google.com/macros/s/AKfycbwJcAUuZYWzIE8OnQoCbJQGDfyRMew1AzQBaZOOXw7_NaHlS9WPHyzCLq5BKqCeoRMRgw/exec' + 
+                        `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
+
+            try {
+                showLoadingSpinner(); // Show loading spinner
+                const response = await fetch(url);
+                const data = await response.json();
+                console.log(data);
+
+                // データをキャッシュに保存
+                availabilityCache[cacheKey] = data;
+
+                updateCalendar(data);
+            } catch (error) {
+                console.error('Error fetching availability:', error);
+            } finally {
+                hideLoadingSpinner(); // Hide loading spinner
+            }
+        }
+
+        function updateCalendar(availability) {
+            const calendar = document.getElementById('calendar1');
+            const table = calendar.querySelector('table tbody');
+
+            const times = [
+                '10:00', '10:30', '11:00', '11:30',
+                '12:00', '12:30', '13:00', '13:30',
+                '14:00', '14:30', '15:00', '15:30',
+                '16:00', '16:30', '17:00', '17:30'
+            ];
+
+            if (table.rows.length === 0) {
+                for (const time of times) {
+                    const row = document.createElement('tr');
+                    const timeCell = document.createElement('td');
+                    timeCell.textContent = time;
+                    row.appendChild(timeCell);
+
+                    for (let i = 0; i < 7; i++) {
+                        const cell = document.createElement('td');
+                        cell.addEventListener('click', () => selectDate(cell));
+                        row.appendChild(cell);
+                    }
+
+                    table.appendChild(row);
+                }
+            }
+
+            // テーブルのヘッダーを更新
+            updateCalendarHeader(currentDate);
+
+            // 各セルを空白にリセット
+            for (let row of table.rows) {
+                for (let i = 1; i < row.cells.length; i++) {
+                    row.cells[i].textContent = '';
+                    row.cells[i].removeAttribute('data-date');
+                }
+            }
+
+            // テーブルの内容を更新
+            for (let i = 0; i < 7; i++) {
+                const day = new Date(currentDate);
+                day.setDate(day.getDate() + i);
+
+                for (let j = 0; j < times.length; j++) {
+                    const cell = table.rows[j].cells[i + 1];
+                    const slotStart = new Date(day);
+                    slotStart.setHours(parseInt(times[j].split(':')[0]), parseInt(times[j].split(':')[1]));
+
+                    const slotEnd = new Date(slotStart);
+                    slotEnd.setMinutes(slotStart.getMinutes() + 30);
+
+                    const count = availability.reduce((acc, slot) => {
+                        const eventStart = new Date(slot.startTime);
+                        const eventEnd = new Date(slot.endTime);
+
+                        if (eventStart < slotEnd && slotStart < eventEnd) {
+                            return acc + 1;
+                        }
+                        return acc;
+                    }, 0);
+
+                    if (count === 0) {
+                        cell.textContent = '◯';
+                    } else if (count === 1) {
+                        cell.textContent = '△';
+                    } else {
+                        cell.textContent = '×';
+                    }
+
+                    cell.setAttribute('data-date', slotStart.toISOString());
+                }
+            }
+        }
+
+        function updateCalendarHeader(date) {
+            const headerRow = document.getElementById('calendar-header');
+            const headers = headerRow.querySelectorAll('th:not(:first-child)');
+
+            const startDate = new Date(date);
+
+            headers.forEach((th, index) => {
+                const day = new Date(startDate);
+                day.setDate(day.getDate() + index);
+
+                const dayOfWeek = ['日', '月', '火', '水', '木', '金', '土'];
+                th.textContent = `${day.getDate()}(${dayOfWeek[day.getDay()]})`;
+            });
+
+            // 現在の月を表示
+            const currentMonthElement = document.getElementById('currentMonth');
+            currentMonthElement.textContent = `${startDate.getFullYear()}年 ${startDate.getMonth() + 1}月`;
         }
 
         function nextWeek() {
@@ -280,78 +438,17 @@
             fetchAvailability(currentDate);
         }
 
-        function fetchAvailability(startDate) {
+        function previousWeek() {
+            currentDate.setDate(currentDate.getDate() - 7);
+            fetchAvailability(currentDate);
+        }
+
+        function showLoadingSpinner() {
             document.getElementById('loadingSpinner').style.display = 'block';
-            const startISOString = startDate.toISOString();
-            if (availabilityCache[startISOString]) {
-                renderCalendar(availabilityCache[startISOString]);
-                return;
-            }
-            google.script.run.withSuccessHandler(function(slots) {
-                availabilityCache[startISOString] = slots;
-                renderCalendar(slots);
-            }).getAvailableSlots(startISOString);
         }
 
-        function renderCalendar(slots) {
-            const calendar = document.getElementById('calendar1').querySelector('tbody');
-            calendar.innerHTML = '';
-            const times = ['10:00', '10:30', '11:00', '11:30', '12:00', '12:30', '13:00', '13:30', '14:00', '14:30', '15:00', '15:30', '16:00', '16:30', '17:00', '17:30'];
-            const startOfWeek = new Date(currentDate);
-            startOfWeek.setDate(startOfWeek.getDate() - startOfWeek.getDay());
-            const headerCells = document.getElementById('calendar-header').children;
-            const daysOfWeek = ['日', '月', '火', '水', '木', '金', '土'];
-            for (let i = 1; i <= 7; i++) {
-                const headerDate = new Date(startOfWeek);
-                headerDate.setDate(headerDate.getDate() + i - 1);
-                headerCells[i].innerHTML = `${daysOfWeek[headerDate.getDay()]}<br>${headerDate.getMonth() + 1}/${headerDate.getDate()}`;
-            }
-            times.forEach(time => {
-                const row = document.createElement('tr');
-                const timeCell = document.createElement('td');
-                timeCell.textContent = time;
-                row.appendChild(timeCell);
-                for (let i = 1; i <= 7; i++) {
-                    const cell = document.createElement('td');
-                    const date = new Date(startOfWeek);
-                    date.setDate(date.getDate() + i - 1);
-                    const dateStr = date.toISOString().split('T')[0];
-                    cell.dataset.date = dateStr;
-                    cell.dataset.time = time;
-                    const slotKey = `${dateStr} ${time}`;
-                    if (slots[slotKey]) {
-                        cell.textContent = '〇';
-                        cell.addEventListener('click', () => selectDate(cell));
-                    } else {
-                        cell.textContent = '×';
-                        cell.style.color = '#ccc';
-                    }
-                    row.appendChild(cell);
-                }
-                calendar.appendChild(row);
-            });
+        function hideLoadingSpinner() {
             document.getElementById('loadingSpinner').style.display = 'none';
-        }
-
-        function submitForm() {
-            const name = document.getElementById('name').value;
-            const phone = document.getElementById('phone').value;
-            const date2 = document.getElementById('date2').value;
-            const date3 = document.getElementById('date3').value;
-            const message = document.getElementById('message').value;
-
-            if (!name || !phone || !visitCount || !selectedSymptom || !selectedFullDate) {
-                alert('すべての必須フィールドを入力してください');
-                return;
-            }
-
-            google.script.run.withSuccessHandler(function(response) {
-                if (response.success) {
-                    alert('予約が成功しました！');
-                } else {
-                    alert('予約に失敗しました。');
-                }
-            }).submitReservation(name, phone, visitCount, selectedSymptom, selectedFullDate, date2, date3, message);
         }
     </script>
 </body>
