--- a/index.html
+++ b/index.html
@@ -257,183 +257,51 @@
             const buttons = document.querySelectorAll('.symptoms button');
             buttons.forEach(btn => btn.classList.remove('active'));
             button.classList.add('active');
-            selectedSymptom = button.textContent;
+            selectedSymptom = button.innerText;
         }
 
-        function selectDate(cell) {
+        function selectTime(cell) {
             const cells = document.querySelectorAll('.calendar td');
-            cells.forEach(td => td.classList.remove('selected'));
+            cells.forEach(c => c.classList.remove('selected'));
             cell.classList.add('selected');
-            const selectedDay = cell.getAttribute('data-date');
-            const selectedTime = cell.parentElement.firstChild.textContent;
-            selectedFullDate = `${selectedDay} ${selectedTime}`;
+            selectedTime = cell.dataset.time;
+            selectedFullDate = selectedDate + ' ' + selectedTime;
             document.getElementById('date1').value = selectedFullDate;
         }
 
         function submitForm() {
-            const formData = {
-                name: document.getElementById('name').value,
-                phone: document.getElementById('phone').value,
-                visitCount: visitCount,
-                selectedSymptom: selectedSymptom,
-                dates: [selectedFullDate, formatDate(document.getElementById('date2').value), formatDate(document.getElementById('date3').value)],
-                message: document.getElementById('message').value
-            };
+            const name = document.getElementById('name').value.trim();
+            const phone = document.getElementById('phone').value.trim();
+            const date1 = document.getElementById('date1').value;
+            const date2 = document.getElementById('date2').value;
+            const date3 = document.getElementById('date3').value;
+            const message = document.getElementById('message').value.trim();
 
-            if (!formData.name || !formData.phone || !formData.visitCount || !formData.dates[0]) {
-                alert('入力不足です');
+            if (!name || !phone || !visitCount || !selectedSymptom || !date1) {
+                alert('全ての必須項目を入力してください。');
                 return;
             }
+
+            const reservationData = {
+                name,
+                phone,
+                visitCount,
+                selectedSymptom,
+                date1,
+                date2,
+                date3,
+                message
+            };
 
             liff.sendMessages([{
                 type: 'text',
-                text: `【予約フォーム】\nお名前：${formData.name}\n電話番号：${formData.phone}\nご来店回数：${formData.visitCount}\nメニュー：${formData.selectedSymptom}\n希望日時：\n ${formData.dates.join('\n ')}\nメッセージ：${formData.message}`
+                text: `予約が完了しました。以下の内容で送信されました：\nお名前: ${name}\n電話番号: ${phone}\nご来店回数: ${visitCount}\n症状: ${selectedSymptom}\n第1希望日: ${date1}\n第2希望日: ${date2}\n第3希望日: ${date3}\nメッセージ: ${message}`
             }]).then(() => {
-                alert('予約が送信されました');
-                liff.closeWindow();
+                alert('予約が完了しました。');
             }).catch((err) => {
-                console.error(err);
-                alert('メッセージ送信に失敗しました');
+                console.error('Error sending message:', err);
+                alert('予約の送信に失敗しました。もう一度お試しください。');
             });
-        }
-
-        function formatDate(dateStr) {
-            if (!dateStr) return '';
-            const date = new Date(dateStr);
-            return `${date.getFullYear()}-${('0' + (date.getMonth() + 1)).slice(-2)}-${('0' + date.getDate()).slice(-2)} ${('0' + date.getHours()).slice(-2)}:${('0' + date.getMinutes()).slice(-2)}`;
-        }
-
-        async function fetchAvailability(date) {
-            const startTime = new Date(date);
-            const endTime = new Date(date);
-            endTime.setDate(endTime.getDate() + 7);
-
-            const cacheKey = startTime.toISOString() + endTime.toISOString();
-
-            // キャッシュを確認
-            if (availabilityCache[cacheKey]) {
-                console.log('Using cached data');
-                updateCalendar(availabilityCache[cacheKey]);
-                return;
-            }
-
-            const url = 'https://script.google.com/macros/s/AKfycbwJcAUuZYWzIE8OnQoCbJQGDfyRMew1AzQBaZOOXw7_NaHlS9WPHyzCLq5BKqCeoRMRgw/exec' + 
-                        `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
-
-            try {
-                showLoadingSpinner(); // Show loading spinner
-                const response = await fetch(url);
-                const data = await response.json();
-                console.log(data);
-
-                // データをキャッシュに保存
-                availabilityCache[cacheKey] = data;
-
-                updateCalendar(data);
-            } catch (error) {
-                console.error('Error fetching availability:', error);
-            } finally {
-                hideLoadingSpinner(); // Hide loading spinner
-            }
-        }
-
-        function updateCalendar(availability) {
-            const calendar = document.getElementById('calendar1');
-            const table = calendar.querySelector('table tbody');
-
-            const times = [
-                '10:00', '10:30', '11:00', '11:30',
-                '12:00', '12:30', '13:00', '13:30',
-                '14:00', '14:30', '15:00', '15:30',
-                '16:00', '16:30', '17:00', '17:30'
-            ];
-
-            if (table.rows.length === 0) {
-                for (const time of times) {
-                    const row = document.createElement('tr');
-                    const timeCell = document.createElement('td');
-                    timeCell.textContent = time;
-                    row.appendChild(timeCell);
-
-                    for (let i = 0; i < 7; i++) {
-                        const cell = document.createElement('td');
-                        cell.addEventListener('click', () => selectDate(cell));
-                        row.appendChild(cell);
-                    }
-
-                    table.appendChild(row);
-                }
-            }
-
-            // テーブルのヘッダーを更新
-            updateCalendarHeader(currentDate);
-
-            // 各セルを空白にリセット
-            for (let row of table.rows) {
-                for (let i = 1; i < row.cells.length; i++) {
-                    row.cells[i].textContent = '';
-                    row.cells[i].removeAttribute('data-date');
-                }
-            }
-
-            // テーブルの内容を更新
-            for (let i = 0; i < 7; i++) {
-                const day = new Date(currentDate);
-                day.setDate(day.getDate() + i);
-
-                for (let j = 0; j < times.length; j++) {
-                    const cell = table.rows[j].cells[i + 1];
-                    const slotStart = new Date(day);
-                    slotStart.setHours(parseInt(times[j].split(':')[0]), parseInt(times[j].split(':')[1]));
-
-                    const slotEnd = new Date(slotStart);
-                    slotEnd.setMinutes(slotStart.getMinutes() + 30);
-
-                    const count = availability.reduce((acc, slot) => {
-                        const eventStart = new Date(slot.startTime);
-                        const eventEnd = new Date(slot.endTime);
-
-                        if (eventStart < slotEnd && slotStart < eventEnd) {
-                            return acc + 1;
-                        }
-                        return acc;
-                    }, 0);
-
-                    if (count === 0) {
-                        cell.textContent = '◯';
-                    } else if (count === 1) {
-                        cell.textContent = '△';
-                    } else {
-                        cell.textContent = '×';
-                    }
-
-                    cell.setAttribute('data-date', slotStart.toISOString());
-                }
-            }
-        }
-
-        function updateCalendarHeader(date) {
-            const headerRow = document.getElementById('calendar-header');
-            const headers = headerRow.querySelectorAll('th:not(:first-child)');
-
-            const startDate = new Date(date);
-
-            headers.forEach((th, index) => {
-                const day = new Date(startDate);
-                day.setDate(day.getDate() + index);
-
-                const dayOfWeek = ['日', '月', '火', '水', '木', '金', '土'];
-                th.textContent = `${day.getDate()}(${dayOfWeek[day.getDay()]})`;
-            });
-
-            // 現在の月を表示
-            const currentMonthElement = document.getElementById('currentMonth');
-            currentMonthElement.textContent = `${startDate.getFullYear()}年 ${startDate.getMonth() + 1}月`;
-        }
-
-        function nextWeek() {
-            currentDate.setDate(currentDate.getDate() + 7);
-            fetchAvailability(currentDate);
         }
 
         function previousWeek() {
@@ -441,12 +309,94 @@
             fetchAvailability(currentDate);
         }
 
-        function showLoadingSpinner() {
-            document.getElementById('loadingSpinner').style.display = 'block';
+        function nextWeek() {
+            currentDate.setDate(currentDate.getDate() + 7);
+            fetchAvailability(currentDate);
         }
 
-        function hideLoadingSpinner() {
+        async function fetchAvailability(date) {
+            const year = date.getFullYear();
+            const month = date.getMonth() + 1; // 月は0ベース
+            const day = date.getDate();
+            const cacheKey = `${year}-${month}-${day}`;
+
+            if (availabilityCache[cacheKey]) {
+                updateCalendar(availabilityCache[cacheKey]);
+                return;
+            }
+
+            document.getElementById('loadingSpinner').style.display = 'block';
+            const response = await fetch(`https://script.google.com/macros/s/AKfycbyDeYGl1MTZ9Pv1yV-4hpkUtRA7B-tKTk2mc1PXjkH8cf5LbctyF2TIsH20qij9ZXT8/exec?date=${year}-${month}-${day}`);
+            const availability = await response.json();
+            availabilityCache[cacheKey] = availability;
             document.getElementById('loadingSpinner').style.display = 'none';
+
+            updateCalendar(availability);
+        }
+
+        function updateCalendar(availability) {
+            const calendarHeader = document.getElementById('calendar-header');
+            const tbody = document.querySelector('.calendar tbody');
+            tbody.innerHTML = ''; // カレンダーをリセット
+
+            const times = ['09:00', '09:30', '10:00', '10:30', '11:00', '11:30', '12:00', '12:30', '13:00', '13:30', '14:00', '14:30', '15:00', '15:30', '16:00', '16:30', '17:00', '17:30', '18:00'];
+
+            const daysOfWeek = ['日', '月', '火', '水', '木', '金', '土'];
+            const startDate = new Date(currentDate);
+            startDate.setDate(currentDate.getDate() - currentDate.getDay());
+
+            calendarHeader.innerHTML = '<th>時間</th>';
+            for (let i = 0; i < 7; i++) {
+                const date = new Date(startDate);
+                date.setDate(startDate.getDate() + i);
+                const dayOfWeek = daysOfWeek[date.getDay()];
+                const dateStr = `${date.getMonth() + 1}/${date.getDate()}(${dayOfWeek})`;
+                const th = document.createElement('th');
+                th.innerText = dateStr;
+                calendarHeader.appendChild(th);
+            }
+
+            times.forEach(time => {
+                const tr = document.createElement('tr');
+                const timeTd = document.createElement('td');
+                timeTd.innerText = time;
+                tr.appendChild(timeTd);
+
+                for (let i = 0; i < 7; i++) {
+                    const td = document.createElement('td');
+                    const date = new Date(startDate);
+                    date.setDate(startDate.getDate() + i);
+                    const dateKey = `${date.getFullYear()}-${date.getMonth() + 1}-${date.getDate()} ${time}`;
+
+                    td.dataset.time = time;
+                    td.dataset.date = dateKey;
+
+                    if (availability[dateKey]) {
+                        if (availability[dateKey] === '○') {
+                            td.innerText = '○';
+                            td.style.backgroundColor = '#d4edda';
+                        } else if (availability[dateKey] === '△') {
+                            td.innerText = '△';
+                            td.style.backgroundColor = '#fff3cd';
+                        } else {
+                            td.innerText = '×';
+                            td.style.backgroundColor = '#f8d7da';
+                        }
+                    } else {
+                        td.innerText = '×';
+                        td.style.backgroundColor = '#f8d7da';
+                    }
+
+                    td.onclick = () => selectTime(td);
+                    tr.appendChild(td);
+                }
+
+                tbody.appendChild(tr);
+            });
+
+            const currentMonth = document.getElementById('currentMonth');
+            const currentMonthDate = new Date(currentDate);
+            currentMonth.innerText = `${currentMonthDate.getFullYear()}年${currentMonthDate.getMonth() + 1}月`;
         }
     </script>
 </body>
