--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ for (let i = 0; i < 7; i++) {
         if (count === 0) {
             cell.textContent = '◯';
         } else if (count === 1) {
-            cell.textContent = '△';
+            cell.textContent = '×';
         } else {
             cell.textContent = '×';
         }
