--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ for (let i = 0; i < 7; i++) {
                 day.setDate(day.getDate() + index);
 
                 const dayOfWeek = ['日', '月', '火', '水', '木', '金', '土'];
-                th.textContent = `${day.getDate()}(${dayOfWeek[day.getDay()]})`;
+                th.textContent = `${day.getDate()}<br>(${dayOfWeek[day.getDay()]})`;
             });
 
             // 現在の月を表示
