--- a/index.html
+++ b/index.html
@@ -423,8 +423,9 @@ for (let i = 0; i < 7; i++) {
                 const day = new Date(startDate);
                 day.setDate(day.getDate() + index);
 
-                const dayOfWeek = ['日', '月', '火', '水', '木', '金', '土'];
-                th.textContent = `${day.getDate()}<br>(${dayOfWeek[day.getDay()]})`;
+const dayOfWeek = ['日', '月', '火', '水', '木', '金', '土'];
+const dayString = `${day.getDate()}(${dayOfWeek[day.getDay()]})`;
+th.innerHTML = dayString.replace('(', '<br>(');
             });
 
             // 現在の月を表示
