--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             padding: 5px;
             cursor: pointer;
             vertical-align: top;
-            width: 50px;
+            width: 60px;
             box-sizing: border-box;
         }
         .calendar th {
@@ -402,9 +402,9 @@ for (let i = 0; i < 7; i++) {
         if (count === 0) {
             cell.textContent = '◯';
         } else if (count === 1) {
-            cell.textContent = '×';
+            cell.textContent = '✕';
         } else {
-            cell.textContent = '×';
+            cell.textContent = '✕';
         }
 
         cell.setAttribute('data-date', slotStart.toISOString());
