--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             height: 100vh;
             margin: 0;
             padding-top: 20px;
+            overflow-x: hidden; /* 横スクロールを防ぐ */
         }
         .container {
             background-color: #fff;
@@ -85,7 +86,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             position: relative;
         }
         .calendar {
@@ -94,8 +95,8 @@
             border: 1px solid #ccc;
             border-radius: 4px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            overflow: auto;
-            width: 102%;
+            overflow: hidden; /* 横スクロールを防ぐ */
+            width: 100%;
         }
         .calendar table {
             width: 100%;
@@ -106,7 +107,7 @@
             padding: 5px;
             cursor: pointer;
             vertical-align: top;
-            width: 40px;
+            width: 14.28%; /* 7日間が一列に収まるように設定 */
             box-sizing: border-box;
         }
         .calendar th {
