--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
             align-items: center;
             margin-bottom: 20px;
             position: relative;
+            width: 103%; /* 横幅を広げる */
         }
         .calendar {
             flex: 1;
@@ -96,7 +97,7 @@
             border-radius: 4px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
             overflow: hidden; /* 横スクロールを防ぐ */
-            width: 100%;
+            width: 103%;
         }
         .calendar table {
             width: 100%;
