--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             max-width: 500px;
             padding: 20px;
             box-sizing: border-box;
+            margin: 0 auto; /* 中央に配置 */
         }
         h1 {
             text-align: center;
