--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            justify-content: center; /* カレンダーを中央に配置 */
             margin-bottom: 20px;
             position: relative;
             width: 106%; /* 横幅を広げる */
