--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
             margin-bottom: 20px;
             position: relative;
             width: 106%; /* 横幅を広げる */
+            margin-left: -3%; /* 親要素の中心にカレンダーを配置 */
         }
         .calendar {
             flex: 1;
