--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
             vertical-align: top;
             width: 14.28%; /* 7日間が一列に収まるように設定 */
             box-sizing: border-box;
+            border: 1px solid #ccc; /* ここで区切り線を追加 */
         }
         .calendar th {
             background-color: #f7f7f7;
