--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <button type="button" onclick="selectSymptom(this)">重症</button>
         </div>
 
-        <label for="date1">第1希望日※必須<br>希望時間は00分or30分でお願いします</label>
+        <label for="date1">希望日</label>
         <div class="calendar-container">
             <div class="week-button-container">
                 <button class="week-button" onclick="previousWeek()">前の週</button>
@@ -218,12 +218,6 @@
             </div>
         </div>
 
-        <label for="date2">第2希望日</label>
-        <input type="datetime-local" id="date2" placeholder="タップして日時を入力">
-
-        <label for="date3">第3希望日</label>
-        <input type="datetime-local" id="date3" placeholder="タップして日時を入力">
-
         <label for="message">メッセージ（質問等お気軽にご記入ください）</label>
         <textarea id="message" rows="4" placeholder="メッセージを入力してください"></textarea>
 
@@ -234,8 +228,6 @@
     <script>
         let visitCount = '';
         let selectedSymptom = '';
-        let selectedDate;
-        let selectedTime = '';
         let selectedFullDate = '';
         let currentDate = new Date();
         let availabilityCache = {};
@@ -288,7 +280,7 @@ function selectDate(cell) {
                 phone: document.getElementById('phone').value,
                 visitCount: visitCount,
                 selectedSymptom: selectedSymptom,
-                dates: [selectedFullDate, formatDate(document.getElementById('date2').value), formatDate(document.getElementById('date3').value)],
+                dates: [selectedFullDate],
                 message: document.getElementById('message').value
             };
 
